--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #006d64;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,15 +18,6 @@
   margin: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -34,15 +25,12 @@ body {
   min-width: 320px;
   min-height: 100vh;
   text-align: center;
-
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
   font-family: 'Bruno Ace SC', cursive;
-  /* font-family: 'Monoton', cursive; */
-
 }
 
 #app {
@@ -55,12 +43,12 @@ h1 {
   height: 4em;
   will-change: filter;
   transition: filter 300ms;
-  padding: 1em;
-  border-radius: 2em;
+  margin: 1em;
+  border-radius: 1em;
 }
-.logo:hover {
+/* .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
-}
+} */
 
 .card {
   margin-top: 1em;
@@ -81,7 +69,6 @@ h1 {
   pointer-events: none;
 }
 
-
 .result {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -93,21 +80,23 @@ h1 {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #ffffff;
 }
 
-.result .secondary{
-  font-size: 0.6em;
+.result .secondary{ font-size: 0.6em; }
+
+
+.drop-shadow {
+  box-shadow: 0 0 1em -0.5em #000;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #009f91;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
+  .drop-shadow {
+    box-shadow: 0 0 4em -1em #009f91;
   }
-  .result {
-    background-color: #f9f9f9;
-  }
+
 }
