--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,8 @@ h1 {
   display: flex;
   flex-direction: column;
   text-align: center;
-  gap: 0.5em;
+  gap: 1em;
+  margin-top: 1em;
 }
 
 .card input {
