--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 h1 {
-  font-size: 2.6em;
+  font-size: 4.6rem;
   line-height: 1.1;
   font-family: 'Bruno Ace SC', cursive;
 }
@@ -34,35 +34,36 @@ h1 {
 #app {
   width: clamp(320px, 50%, 400px);
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
+
 }
 
 .logo {
-  height: 4em;
+  height: 4rem;
   will-change: filter;
   transition: filter 300ms;
-  margin: 1em;
-  border-radius: 1em;
+  margin: 0.75rem;
+  border-radius: 1rem;
 }
 .card {
-  margin-top: 0.5em;
-  font-size: 3em;
+  font-size: 3rem;
   display: flex;
   flex-direction: column;
   text-align: center;
-  gap: 1em;
-  margin-top: 1em;
+  gap: 1rem;
+  margin-top: 1rem;
 }
 
 .card input {
-  font-size: 0.75em;
+  font-size: 1.5rem;
   line-height: 1;
   width: 1ch;
-  margin: 0.05em;
-  padding: 0.25em;
+  margin: 0.25rem;
+  padding: 0.25rem;
   font-family: 'Roboto Mono', system-ui, sans-serif;
+  background-color: #ffffff;
   border: 1px solid #006d64;
-  border-radius: 0.1em;
+  border-radius: 0.25rem;
 }
 
 #distance-input {
@@ -75,17 +76,17 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-.time-display span { font-size: 0.5em;}
+.time-display span { font-size: 1.5rem;}
 
 .distance-display, .distance-units {
-  gap: 0.25em;
+  gap: 0.75rem;
 }
 
 #result {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 0.8em;
+  padding: 0.6rem 1.2rem;
+  font-size: 2.5rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -101,10 +102,10 @@ h1 {
 }
 
 .secondary{
-  font-size: 0.5em;
+  font-size: 1.75rem;
 }
 
-.drop-shadow { box-shadow: 0 0 1em -0.5em #000; }
+.drop-shadow { box-shadow: 0 0 1rem -0.5rem #000; }
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -113,11 +114,13 @@ h1 {
 
   }
   .drop-shadow {
-    box-shadow: 0 0 4em -1em #009f91;
+    box-shadow: 0 0 3rem -1rem #009f91;
   }
 
   .card input,
-  .card input::placeholder{ color: #009f91; }
+  .card input::placeholder{
+    color: #009f91;
+  }
 
 
 }
